src/css/landingpage/banner.module.css
.main {
  background-color: rgb(119, 23, 103);
  max-width: 100vw;
  height: 80vh;
  padding: 10px;
}

.content {
  padding: 20px;
  flex-basis: 50%;
  color: #fff;
}
.heading {
  font-size: 3rem;
}

.texts {
  font-size: 1.5rem;
  color: #ddd;
}

.cta {
  margin-top: 50px;
}
.cta > button {
  margin-right: 20px;
  color: rgb(119, 23, 103);
  font-size: 1.4rem;
  font-weight: 700;
}

.cta > button:hover {
  background-color: rgb(119, 23, 103);
  border: 2px solid #fff;
  color: #fff;
}
.banner_image {
  margin-right: 20px;
}

.img {
  width: 520px;
}

@media screen and (max-width: 1024px) {
  .content {
    padding: 10px;
  }

  .heading {
    font-size: 2.8rem;
  }

  .texts {
    font-size: 1.3rem;
  }

  .banner_image {
    margin-right: 0px;
  }
}

@media screen and (max-width: 768px) {
  .main {
    height: 90vh;
  }

  .content {
    margin-top: 2%;
    padding: 30px;
  }
  .heading {
    font-size: 2.5rem;
    padding: 5px;
  }

  .texts {
    font-size: 1.2rem;
    padding: 15px;
  }

  .cta {
    width: 500px;
    margin: 20px auto 10px;
  }

  .banner_image {
    margin-right: 0;
  }
}

@media screen and (max-width: 425px) {
  /* .main {
    height: 100vh;
  } */

  .heading {
    font-size: 2rem;
  }

  .texts {
    font-size: 1.2rem;
  }

  .cta {
    width: 350px;
    margin: 0;
  }

  .cta > button {
    width: 200px;
    margin-top: 10px;
    font-size: 1.2rem;
  }
  .banner_image {
    margin-right: 0;
  }

  .img {
    width: 350px;
  }
}

@media screen and (max-width: 320px) {
  .heading {
    font-size: 1.8rem;
  }

  .texts {
    font-size: 1rem;
  }
  .cta {
    width: 300px;
  }

  .img {
    width: 280px;
  }
}

